# AVI-Core

./: .env.example  .gitignore  README.md  TEST_RESULTS.txt  pyproject.toml  requirements.txt  run_sleeper_update.py
.github/: daily-avi-update.yml
.github/workflows/: apply-total-power-ranking-method.yml  daily-avi-update.yml  sleeper-auto-update.yml  update-data.yml  update-fantasypros-twice-weekly.yml  update-sleeper-daily.yml  update-sleeper.yml  weekly-franchise-executive-summary.yml
config/: avi.example.json  league.example.json  player_identity_overrides.json
knowledge/: 01_AVI_Draft_Pick_Values_0_100.md  02_AVI_Historical_Trades.md  03_AVI_Player_Current_Team_Lookup.md  AVI_GPT_Instructions.md  AVI_Methodology_Revision_Market_Reality_v2.md
knowledge/franchise_summaries/: README.md  all-hail-king-jesus.json  badland-banditos.json  big-balder-brand.json  conquistadors.json  corgi-loaf-baking-co.json  crimson-tide-pods.json  dmv-fantasy.json  gringo-s-goblins.json  lightskin-legends.json  manifest.json  mile-high-royal-lions.json  northside-kings.json  phalhala-or-bust.json  rapid-valley-annihilation.json  ravens-regime.json  smokyvalleywheatwarriors.json  southside-savages.json
knowledge/teams/: 01_Conquistadors.md  02_Rapid_Valley_Annihilation.md  03_Ravens_Regime.md  (+13 more)
methodology/: AVI_Methodology_2026.1.md
scripts/: generate_weekly_executive_summary.py  generate_weekly_executive_summary_filtered.py
tests/: test_calculator.py  test_history.py  test_lineup.py  test_picks.py  test_projections.py  test_replacement.py  test_trade_ledger.py  test_trades.py
(+161 files in other folders)
